Fixes and improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ authors: [ MakeevRoman ]
 author: MakeevRoman
 website: AstraInteractive.ru
 api-version: 1.18
-softdepend: [ ]
+softdepend: [ DiscordSRV ]
 depend: [ ]
 loadbefore: [ ]
 commands:
