Papi expansion and a few fixes, bstats

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ authors: [ MakeevRoman ]
 author: MakeevRoman
 website: AstraInteractive.ru
 api-version: 1.13
-softdepend: [ DiscordSRV ]
+softdepend: [ DiscordSRV, PlaceholderAPI ]
 depend: [ ]
 loadbefore: [ ]
 commands:
