astraLibs 2.0.14; db fixes

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-main: AstraRating
+main: com.astrainteractive.astrarating.AstraRating
 prefix: '${name}'
 description: '${description}'
-name: '${name}'
+name: AstraRating
 version: '${version}'
 authors: [ MakeevRoman ]
 author: MakeevRoman
