feat: moved to .toml; fixed inventory click bugs; AstraLibs updated

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: com.astrainteractive.astrarating.AstraRating
 prefix: '${name}'
 description: '${description}'
-name: AstraRating
+name: '${name}'
 version: '${version}'
 authors: [ MakeevRoman ]
 author: MakeevRoman
