--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ json = "1.3.3"
 kaml = "0.46.0"
 exposed = "0.38.1"
 jdbc = "3.36.0.3"
-astraLibs = "2.1.1"
+astraLibs = "2.2.0-l5"
 shadow = "7.1.2"
 mysqlDriver = "8.0.20"
 orgTesting = "7.1.0"
