--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-plugin = "1.5.0"
+plugin = "1.5.2"
 name = "AstraRating"
 group =  "com.astrainteractive"
 description = "Rating plugin for EmpireSMP"
@@ -13,7 +13,7 @@ json = "1.5.0-RC"
 kaml = "0.50.0"
 exposed = "0.38.1"
 jdbc = "3.36.0.3"
-astraLibs = "2.2.1-l1"
+astraLibs = "2.2.3"
 shadow = "7.1.2"
 mysqlDriver = "8.0.20"
 orgTesting = "7.1.0"
