--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -26,12 +26,12 @@ cutWords: false
 # MySql has higher priority!!!
 databaseConnection:
   sqlite: true
-  mysql:
-    database: "my_database_name"
-    host: "127.0.0.1"
-    port: 3306
-    username: "my_username"
-    password: "XXX_SUPER_PASSWORD_SECURITY"
+  #mysql:
+  #  database: "my_database_name"
+  #  host: "127.0.0.1"
+  #  port: 3306
+  #  username: "my_username"
+  #  password: "XXX_SUPER_PASSWORD_SECURITY"
 # Color are sorted by value: [-10, -5, 0, 5, 10]
 # Be sure to fill ALL GAPS/INTERVALS - if not you'll have errors in console
 # If you don't want this feature - remove coloring section or comment it using '#' symbol
@@ -42,8 +42,14 @@ databaseConnection:
 #  # If <-10 -> #9c0303
 #  - less: -10
 #    color: #9c0303
-#  # If ==0 -> #000000
-#  - equals: 0
+#  # If <0 -> #FFFFFF
+#  - less: 0
+#    color: #FFFFFF
+#  # If ==0 -> #FFFFFF
+#  - equal: 0
+#    color: #FFFFFF
+#  # If >0 -> #FFFFFF
+#  - more: 0
 #    color: #FFFFFF
 #  # If >5 -> #51a8f5
 #  - more: 5
