--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ name = "AstraRating"
 group =  "com.astrainteractive"
 description = "Rating plugin for EmpireSMP"
 wear-gms = "18.0.0"
-destinationDirectoryPath = "D:\\Minecraft Servers\\EmpireProjekt_remake\\smp\\plugins"
+destinationDirectoryPath = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
 # Kotlin
 kotlin = "1.7.0"
 jetbrainsCompose = "1.2.0"
