--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-plugin = "1.5.2"
+plugin = "1.6.0-RC1"
 name = "AstraRating"
 group =  "com.astrainteractive"
 description = "Rating plugin for EmpireSMP"
