--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ json = "1.5.0-RC"
 kaml = "0.50.0"
 exposed = "0.38.1"
 jdbc = "3.36.0.3"
-astraLibs = "2.2.3"
+astraLibs = "2.3.0-RC3"
 shadow = "7.1.2"
 mysqlDriver = "8.0.20"
 orgTesting = "7.1.0"
