--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -3,107 +3,53 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
 jobs:
-  # https://github.com/marketplace/actions/build-tag-number
-  # Increase version ${{needs.version_increase.outputs.build_number}}
-  version_increase:
-    runs-on: ubuntu-latest
-    outputs:
-      build_number: ${{ steps.buildnumber.outputs.build_number }}
-    steps:
-      - name: Generate build number
-        id: buildnumber
-        uses: onyxmueller/build-tag-number@v1
-        with:
-          token: ${{ secrets.actions_token }}
-      - name: Print new build number
-        run: echo "Build number is $BUILD_NUMBER"
+  gradle_validation:
+    uses: ./.github/workflows/gradle-wrapper-validation.yml
+  detekt_validation:
+    needs: gradle_validation
+    uses: ./.github/workflows/detekt-validation.yml
+  tests_validation:
+    needs: gradle_validation
+    uses: ./.github/workflows/tests-validation.yml
 
-  validate_gradle:
-    name: Validate gradle
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-
-  build:
+  publish:
     name: Build and upload
     runs-on: ubuntu-latest
-    needs: [ version_increase, validate_gradle ]
+    needs: [ gradle_validation, detekt_validation, tests_validation ]
     steps:
       - name: Checkout Git repo
         uses: actions/checkout@v2
-
-      - name: Restore Gradle cache
-        uses: actions/cache@v2
+      - uses: SebRollen/toml-action@v1.0.2
+        id: version
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
+          file: 'gradle/libs.versions.toml'
+          field: 'versions.project-version'
+      - uses: SebRollen/toml-action@v1.0.2
+        id: name
+        with:
+          file: 'gradle/libs.versions.toml'
+          field: 'versions.project-name'
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: 17
-      # This will automatically write ./.github/version.env
-      # MAJOR_VERSION=X.X.X
-      # PROJECT_NAME=YOUR_PROJECT_NAME
-      - name: Write version to .env
-        run: |
-          chmod +x gradlew
-          ./gradlew PublishPrimaryVersion --stacktrace
-
-      - name: 'Set variables'
-        id: vars
-        run: |
-          export $(cat .github/version.env | xargs)
-          export "BUILD_VERSION=${MAJOR_VERSION}.${{needs.version_increase.outputs.build_number}} " >> $GITHUB_OUTPUT
-          
-          echo "MAJOR_VERSION=${MAJOR_VERSION}" >> $GITHUB_OUTPUT
-          echo "MINOR_VERSION=${{ needs.version_increase.outputs.build_number }}" >> $GITHUB_OUTPUT
-          echo "BUILD_VERSION=${MAJOR_VERSION}.${{needs.version_increase.outputs.build_number}}" >> $GITHUB_OUTPUT
-          echo "PROJECT_NAME=${PROJECT_NAME}" >> $GITHUB_OUTPUT          
-          
-          echo ".github/version.env content:"
-          echo "$(cat .github/version.env)"
-          
-          echo "saved vars:"
-          echo "BUILD_VERSION=${BUILD_VERSION}"
-          echo "MAJOR_VERSION=${MAJOR_VERSION}"
-          echo "PROJECT_NAME=${PROJECT_NAME}"
-
-      # Build shadowJar and rename .jar
+      - name: Give gradle permission
+        run: chmod +x gradlew
       - name: Build with Gradle
-        run: |
-          chmod +x gradlew
-          ./gradlew shadowJar --stacktrace
-          echo "${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.MAJOR_VERSION }}.jar"
-          echo "${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.BUILD_VERSION }}.jar"
-          mv "jars/${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.MAJOR_VERSION }}.jar" "jars/${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.BUILD_VERSION }}.jar"
-
-      # No need to archive
-      #      - name: Archive plugin jars on GitHub
-      #        uses: actions/upload-artifact@v3
-      #        with:
-      #          name: ${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.BUILD_VERSION }}
-      #          path: ./jars
-
-      - name: Create internal Release
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: shadowJar --stacktrace
+      - name: Create release
         id: create_internal_release
         uses: softprops/action-gh-release@v1
         env:
-          GITHUB_TOKEN: ${{secrets.actions_token}}
+          GITHUB_TOKEN: ${{ secrets.actions_token }}
         with:
           files: |
-            ./jars/${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.BUILD_VERSION }}.jar
-          tag_name: ${{ steps.vars.outputs.BUILD_VERSION }}
-          name: ${{ steps.vars.outputs.PROJECT_NAME }}-${{ steps.vars.outputs.BUILD_VERSION }}
+            ./jars/${{ steps.name.outputs.value }}-${{ steps.version.outputs.value }}.jar
+          tag_name: ${{ steps.version.outputs.value }}
+          name: ${{ steps.name.outputs.value }} - ${{ steps.version.outputs.value }}
           draft: false
-          prerelease: true
+          prerelease: false
