--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 # Plugin core
-plugin-version = "1.7"
-plugin-name = "AstraRating"
-plugin-group = "com.astrainteractive.astrarating"
-plugin-url = "EmpireProjekt.ru"
-plugin-description = "Rating plugin for EmpireProjekt"
-plugin-authors = "Roman Makeev"
-plugin-author = "Roman Makeev"
+project-version = "1.7.1"
+project-name = "AstraRating"
+project-group = "com.astrainteractive.astrarating"
+project-url = "EmpireProjekt.ru"
+project-description = "Rating plugin for EmpireProjekt"
+project-authors = "Roman Makeev"
+project-author = "Roman Makeev"
 
 # Plugin destinations
 destination-paper = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
