--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,13 @@
 kotlin.code.style=official
+# Java
+makeevrserg.java.source=8
+makeevrserg.java.target=17
+makeevrserg.java.ktarget=17
+# Project
+makeevrserg.project.name=AstraRating
+makeevrserg.project.group=com.astrainteractive.astrarating
+makeevrserg.project.version.string=1.7.6
+makeevrserg.project.description=Rating plugin for EmpireProjekt
+makeevrserg.project.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
+makeevrserg.project.url=https://empireprojekt.ru
+makeevrserg.publish.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
