--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,6 @@
 [versions]
-# Plugin core
-project-version = "1.7.5"
-project-name = "AstraRating"
-project-group = "com.astrainteractive.astrarating"
-project-url = "EmpireProjekt.ru"
-project-description = "Rating plugin for EmpireProjekt"
-project-authors = "Roman Makeev"
-project-author = "Roman Makeev"
-
-# Plugin destinations
-destination-paper = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
-destination-fabric = "C:\\Users\\Roman\\Desktop\\server\\mods"
-destination-forge = "C:\\Users\\Roman\\Desktop\\Forge\\mods"
-destination-velocity = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\velocity\\plugins"
-
 # Kotlin
-kotlin-version = "1.8.10"
+kotlin-version = "1.9.0"
 kotlin-coroutines = "1.6.3"
 kotlin-json = "1.5.0-RC"
 kotlin-kaml = "0.50.0"
@@ -24,12 +9,10 @@ kotlin-kaml = "0.50.0"
 driver-jdbc = "3.36.0.3"
 driver-mysql = "8.0.20"
 
-
-
 # Minecraft
 minecraft-version = "1.19.2"
 minecraft-velocity = "3.1.1"
-minecraft-spigot = "1.19.3-R0.1-SNAPSHOT"
+minecraft-spigot = "1.20.1-R0.1-SNAPSHOT"
 minecraft-papi = "2.11.2"
 minecraft-protocollib = "4.8.0"
 minecraft-wg = "7.0.7"
@@ -56,11 +39,6 @@ minecraft-fabric-api = "0.60.0+1.19.2"
 minecraft-forge-net = "5.1.61"
 minecrft-forge-version = "1.19.2-43.1.52"
 
-# Linter
-lint-detekt = "1.22.0"
-lint-detekt-ruleset-compiler = "0.0.2"
-lint-detekt-ruleset-ktlint = "0.48.0"
-
 # Shadow
 gradle-shadow = "7.1.2"
 
@@ -70,13 +48,7 @@ gradle-buildconfig = "3.1.0"
 # Exposed
 exposed = "0.38.1"
 
-
-
 [libraries]
-# Linter
-lint-detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "lint-detekt" }
-lint-detekt-ruleset-compiler = { module = "com.braisgabin.detekt:kotlin-compiler-wrapper", version.ref = "lint-detekt-ruleset-compiler" }
-lint-detekt-ruleset-ktlint = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "lint-detekt" }
 
 # Kotlin
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
@@ -103,7 +75,6 @@ exposed-java-time = { module = "org.jetbrains.exposed:exposed-java-time", versio
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
-
 
 # Minecraft
 minecraft-paper-api = { module = "io.papermc.paper:paper-api", version.ref = "minecraft-spigot" }
@@ -133,8 +104,7 @@ minecraft-mojang = { module = "com.mojang:minecraft", version.ref = "minecraft-v
 exposed = ["exposed-java-time", "exposed-jdbc", "exposed-dao", "exposed-core"]
 minecraft-bukkit = ["minecraft-paper-api", "minecraft-spigot-api", "minecraft-spigot-core", "minecraft-vaultapi", "minecraft-papi"]
 testing-kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "driver-jdbc", "driver-mysql", "kotlin-serialization", "kotlin-serializationJson"]
-kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "kotlin-serialization", "kotlin-serializationJson", "kotlin-serializationKaml", "kotlin-dokka-kotlinJavaPlugin", "kotlin-gradle"]
-
+kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "kotlin-serialization", "kotlin-serializationJson", "kotlin-serializationKaml", "kotlin-gradle"]
 
 [plugins]
 # Kotlin
@@ -145,9 +115,6 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 # Minecraft
 minecraft-fabric-loom = { id = "fabric-loom", version.ref = "minecraft-fabric-loom" }
 minecraft-forge-net = { id = "net.minecraftforge.gradle", version.ref = "minecraft-forge-net" }
-
-# Lint
-lint-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "lint-detekt" }
 
 # Gradle
 gradle-shadow = { id = "com.github.johnrengelman.shadow", version.ref = "gradle-shadow" }
