--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ makeevrserg.java.ktarget=17
 # Project
 makeevrserg.project.name=AstraRating
 makeevrserg.project.group=com.astrainteractive.astrarating
-makeevrserg.project.version.string=1.7.7
+makeevrserg.project.version.string=1.8.0-RC1
 makeevrserg.project.description=Rating plugin for EmpireProjekt
 makeevrserg.project.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
 makeevrserg.project.url=https://empireprojekt.ru
