update ci, up version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ makeevrserg.java.ktarget=17
 # Project
 makeevrserg.project.name=AstraRating
 makeevrserg.project.group=ru.astrainteractive.astrarating
-makeevrserg.project.version.string=1.14.0
+makeevrserg.project.version.string=1.15.0-unstable
 makeevrserg.project.description=Rating plugin for EmpireProjekt
 makeevrserg.project.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
 makeevrserg.project.url=https://empireprojekt.ru
