--- a/.github/workflows/check-develop.yml
+++ b/.github/workflows/check-develop.yml
@@ -1,23 +1,20 @@
 name: Check Develop
 on:
-  pull_request:
-    branches:
-      - *
   push:
     branches:
       - develop
 jobs:
   gradle_validation:
     name: Validate gradle wrapper
-    uses: ./.github/workflows/gradle-wrapper-validation.yml
+    uses: ./.github/workflows/call-gradle-wrapper-validation.yml
   detekt_validation:
     name: Check by detekt
     needs: gradle_validation
-    uses: ./.github/workflows/detekt-validation.yml
+    uses: ./.github/workflows/call-detekt-validation.yml
   tests_validation:
     needs: gradle_validation
-    uses: ./.github/workflows/tests-validation.yml
+    uses: ./.github/workflows/call-tests-validation.yml
   build:
     name: Build project
-    needs: [ gradle_validation, detekt_validation ]
-    uses: ./.github/workflows/build-project.yml
+    needs: [ gradle_validation, detekt_validation,tests_validation ]
+    uses: ./.github/workflows/call-build-project.yml
