--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ driver-jdbc = "3.45.3.0" # https://github.com/xerial/sqlite-jdbc
 driver-mysql = "8.0.33" # https://github.com/mysql/mysql-connector-j
 
 # klibs
-klibs-gradleplugin = "1.0.0-alpha01" # https://github.com/makeevrserg/gradle-plugin
+klibs-gradleplugin = "1.2.0" # https://github.com/makeevrserg/gradle-plugin
 klibs-mikro = "1.6.0-beta" # https://github.com/makeevrserg/klibs.mikro
 klibs-kdi = "1.3.2" # https://github.com/makeevrserg/klibs.kdi
 
@@ -23,9 +23,6 @@ minecraft-vault = "1.7" # https://github.com/MilkBowl/VaultAPI
 minecraft-astralibs = "3.1.0-alpha" # https://github.com/Astra-Interactive/AstraLibs
 minecraft-bstats = "3.0.0" # https://github.com/Bastian/bStats
 minecraft-mockbukkit = "v1.19-SNAPSHOT" #https://github.com/MockBukkit/MockBukkit
-
-# Shadow
-gradle-shadow = "7.1.2" # https://github.com/johnrengelman/shadow
 
 # BuildConfig
 gradle-buildconfig = "3.1.0" # https://github.com/gmazzo/gradle-buildconfig-plugin
@@ -42,9 +39,6 @@ kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", v
 kotlin-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-json" }
 kotlin-serializationKaml = { module = "com.charleskorn.kaml:kaml", version.ref = "kotlin-kaml" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-version" }
-
-# Shadow
-gradle-shadow = { module = "gradle.plugin.com.github.johnrengelman:shadow", version.ref = "gradle-shadow" }
 
 # Drivers
 driver-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "driver-jdbc" }
@@ -98,7 +92,6 @@ kotlin-gradle = { id = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref 
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-version" }
 
 # Gradle
-gradle-shadow = { id = "com.github.johnrengelman.shadow", version.ref = "gradle-shadow" }
 gradle-buildconfig = { id = "com.github.gmazzo.buildconfig", version.ref = "gradle-buildconfig" }
 
 # klibs - core
