--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ makeevrserg.java.ktarget=21
 # Project
 makeevrserg.project.name=AstraRating
 makeevrserg.project.group=ru.astrainteractive.astrarating
-makeevrserg.project.version.string=1.19.0-unstable
+makeevrserg.project.version.string=1.20.0
 makeevrserg.project.description=Rating plugin for EmpireProjekt
 makeevrserg.project.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
 makeevrserg.project.url=https://empireprojekt.ru
