--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,8 +12,8 @@ driver-mysql = "8.0.33" # https://github.com/mysql/mysql-connector-j
 # klibs
 klibs-gradleplugin = "1.5.0-alpha02" # https://github.com/makeevrserg/gradle-plugin
 klibs-mikro = "1.8.18" # https://github.com/makeevrserg/klibs.mikro
-klibs-kdi = "1.4.8" # https://github.com/makeevrserg/klibs.kdi
-klibs-kstorage = "3.3.0" # https://github.com/makeevrserg/klibs.kstorage
+klibs-kstorage = "4.0.0" # https://github.com/makeevrserg/klibs.kstorage
+klibs-paging = "2.4.0" # https://github.com/makeevrserg/klibs.paging
 
 # Minecraft
 minecraft-velocity = "4.0.0-SNAPSHOT" # https://github.com/PaperMC/Velocity
@@ -65,8 +65,8 @@ minecraft-mockbukkit = { module = "com.github.MockBukkit:MockBukkit", version.re
 
 # klibs
 klibs-mikro-core = { module = "ru.astrainteractive.klibs:mikro-core", version.ref = "klibs-mikro" }
-klibs-kdi = { module = "ru.astrainteractive.klibs:kdi", version.ref = "klibs-kdi" }
 klibs-kstorage = { module = "ru.astrainteractive.klibs:kstorage", version.ref = "klibs-kstorage" }
+klibs-paging = { module = "ru.astrainteractive.klibs:paging", version.ref = "klibs-paging" }
 
 # AstraLibs
 minecraft-astralibs-exposed = { module = "ru.astrainteractive.astralibs:exposed", version.ref = "minecraft-astralibs" }
